tests/programs/type-errors/impl_bad_struct.rice
interface Bar {}

impl Bar for Foo {}

fn main() { () }